--- a/src/app/products.component.html
+++ b/src/app/products.component.html
@@ -1,3 +1,4 @@
 <h1>My Product</h1>
+<input type="text" [(ngModel)]="productName">
 <button (click)="productName = 'A tree'" [disabled] = "isDisabled">Product</button>
 <div>{{productName}}</div>
