custom and event property binding, the real one. Not the previous commit. Common for cross component communication

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<article class="product">
+<article class="product" (click)="onClick()">
   <div>{{productName}}</div>
   <p>An awesome product!</p>
 </article>
