--- a/src/app/products.component.html
+++ b/src/app/products.component.html
@@ -1,4 +1,4 @@
 <h1>My Product</h1>
 <input *ngIf="!isDisabled" type="text" [(ngModel)]="productName">
 <button *ngIf="!isDisabled" (click)="onAddProduct()">Add Product</button>
-<app-product *ngFor="let product of products" [productName]="product"></app-product>
+<app-product (productClicked)="onRemoveProduct(product)"  *ngFor="let product of products" [productName]="product"></app-product>
