flex-layout package added and some edit of signUp form

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,7 +1,11 @@
-<section>
-  <form>
+<section class="singUpForm">
+  <form fxLayout="column" fxLayoutAlign="center center">
     <mat-form-field>
-      <input text="email" matInput placeholder="Your email">
+      <input type="email" matInput placeholder="Your email">
+    </mat-form-field>
+    <mat-form-field>
+      <input  type="password" matInput placeholder="Your password">
     </mat-form-field>
   </form>
 </section>
+
