--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -30,6 +30,14 @@
       </mat-hint>
 
     </mat-form-field>
+    <!-- calendar -->
+    <mat-form-field>
+      <input matInput placeholder="Your birthdate" [matDatepicker]="picker">
+      <mat-datepicker-toggle matSuffix [for]="picker">
+        <mat-datepicker #picker>
+        </mat-datepicker>
+      </mat-datepicker-toggle>
+    </mat-form-field>
     <button  mat-raised-button color="primary">Submit</button>
   </form>
 </section>
