--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -30,9 +30,10 @@
       </mat-hint>
 
     </mat-form-field>
+
     <!-- calendar -->
     <mat-form-field>
-      <input matInput placeholder="Your birthdate" [matDatepicker]="picker">
+      <input matInput placeholder="Your birthdate" [matDatepicker]="picker" [max]="maxDate">
       <mat-datepicker-toggle matSuffix [for]="picker">
         <mat-datepicker #picker>
         </mat-datepicker>
