--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,5 +1,5 @@
 <section class="singUpForm">
-  <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
+  <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
     <mat-form-field>
       <input type="email"
              matInput
@@ -33,13 +33,21 @@
 
     <!-- calendar -->
     <mat-form-field>
-      <input matInput placeholder="Your birthdate" [matDatepicker]="picker" [max]="maxDate">
+      <input matInput placeholder="Your birthDate"
+             [matDatepicker]="picker"
+             [max]="maxDate"
+              ngModel name="birthDate" required>
       <mat-datepicker-toggle matSuffix [for]="picker">
         <mat-datepicker #picker>
         </mat-datepicker>
       </mat-datepicker-toggle>
     </mat-form-field>
-    <button  mat-raised-button color="primary">Submit</button>
+
+    <!-- check box -->
+      <mat-checkbox ngModel name="agree" color="primary" required>
+        Agree to Terms and Conditions.
+      </mat-checkbox>
+    <button  mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
   </form>
 </section>
 
