--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,29 @@
 <mat-sidenav-container>
 <mat-sidenav #sidenav role="navigation">
-<p>hello</p>
+<mat-nav-list>
+  <a mat-list-item routerLink="/signUp" (click)="sidenav.close()">
+  <mat-icon>face</mat-icon>
+    <span class="icon-space">SignUp</span>
+  </a>
+  <a mat-list-item routerLink="/login">
+    <mat-icon>vpn_key</mat-icon>
+    <span class="icon-space">Login</span>
+  </a>
+  <a mat-list-item routerLink="/training">
+    <mat-icon>fitness_center</mat-icon>
+    <span class="icon-space">Training</span>
+  </a>
+  <mat-list-item>
+    <button mat-icon-button>
+      <mat-icon>eject</mat-icon>
+      <span>Logout</span>
+    </button>
+  </mat-list-item>
+</mat-nav-list>
 </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <div fxHide.gt-xs>
+      <div fxHide.xs>
         <button mat-icon-button (click)="sidenav.toggle()">
           <mat-icon>menu</mat-icon>
         </button>
@@ -15,6 +34,7 @@
           <li><a routerLink="/signUp">Signup</a> </li>
           <li><a routerLink="/login">Login</a></li>
           <li><a routerLink="/training">Training</a></li>
+          <a>Logout</a>
         </ul>
       </div>
     </mat-toolbar>
