--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,9 @@
 <mat-sidenav-container>
 <mat-sidenav #sidenav role="navigation">
-<mat-nav-list>
-  <a mat-list-item routerLink="/signUp" (click)="sidenav.close()">
-  <mat-icon>face</mat-icon>
-    <span class="icon-space">SignUp</span>
-  </a>
-  <a mat-list-item routerLink="/login">
-    <mat-icon>vpn_key</mat-icon>
-    <span class="icon-space">Login</span>
-  </a>
-  <a mat-list-item routerLink="/training">
-    <mat-icon>fitness_center</mat-icon>
-    <span class="icon-space">Training</span>
-  </a>
-  <mat-list-item>
-    <button mat-icon-button>
-      <mat-icon>eject</mat-icon>
-      <span>Logout</span>
-    </button>
-  </mat-list-item>
-</mat-nav-list>
+<app-sidenav-list (closeSidenav)="sidenav.close()"></app-sidenav-list>
 </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <div fxHide.xs>
-        <button mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon>menu</mat-icon>
-        </button>
-      </div>
-      <div>LOGO</div>
-      <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
-        <ul fxLayout fxLayoutGap="10px" class="navigation-items">
-          <li><a routerLink="/signUp">Signup</a> </li>
-          <li><a routerLink="/login">Login</a></li>
-          <li><a routerLink="/training">Training</a></li>
-          <a>Logout</a>
-        </ul>
-      </div>
-    </mat-toolbar>
+  <app-header (sideNavToggle)="sidenav.toggle()"></app-header>
     <!--This basically means that all pages in this app will have sidenav component -->
     <router-outlet></router-outlet>
   </mat-sidenav-content>
