welcome screen added

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,14 @@
-<p>
-  welcome works!
-</p>
+<div class="welcome" fxFlex fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="15px" fxLayoutAlign="center center">
+  <section>
+    <p>ACTIVITY</p>
+    <h1>Stay active and enjoy better health and more fun!</h1>
+  </section>
+  <section>
+    <p>COMMUNITY</p>
+    <h1>Get to know other people who share your passion.</h1>
+  </section>
+  <section>
+    <p>CHALLENGES</p>
+    <h1>Dive into more challenges everyday.</h1>
+  </section>
+</div>
