--- a/src/app/training/stop-training/stop-training.component.html
+++ b/src/app/training/stop-training/stop-training.component.html
@@ -1,5 +1,8 @@
 <section>
   <h1 mat-dialog-title>Are you sure?</h1>
+  <mat-dialog-content>
+    <p>You already got {{passedData.progress}}%</p>
+  </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-button [mat-dialog-close]="true">Yes</button>
     <button mat-button [mat-dialog-close]="false">No</button>
