--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,18 +1,18 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/signUp" (click)="onClose()">
+  <a mat-list-item routerLink="/signUp" (click)="onClose()" *ngIf="!isAuth">
     <mat-icon>face</mat-icon>
     <span class="icon-space">SignUp</span>
   </a>
-  <a mat-list-item routerLink="/login" (click)="onClose()">
+  <a mat-list-item routerLink="/login" (click)="onClose()" *ngIf="!isAuth">
     <mat-icon>vpn_key</mat-icon>
     <span class="icon-space">Login</span>
   </a>
-  <a mat-list-item routerLink="/training" (click)="onClose()">
+  <a mat-list-item routerLink="/training" (click)="onClose()" *ngIf="isAuth">
     <mat-icon>fitness_center</mat-icon>
     <span class="icon-space">Training</span>
   </a>
   <mat-list-item>
-    <button mat-icon-button>
+    <button mat-icon-button *ngIf="isAuth" (click)="logout()">
       <mat-icon>eject</mat-icon>
       <span class="icon-space">Logout</span>
     </button>
