--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -6,12 +6,9 @@
     <mat-card-content fxLayoutAlign="center">
       <mat-form-field>
         <mat-select placeholder="Test">
-        <mat-option value="crunches">
-          Crunches
+        <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
+          {{exercise.name}}
         </mat-option>
-          <mat-option value="crunches">
-            Crun
-          </mat-option>
         </mat-select>
       </mat-form-field>
     </mat-card-content>
