--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -1,21 +1,21 @@
-<cdk-table [dataSource]="dataSource">
+<cdk-table [dataSource]="dataSource" matSort>
   <ng-container cdkColumnDef="date">
-    <th cdk-header-cell *cdkHeaderCellDef>Date</th>
+    <th cdk-header-cell *cdkHeaderCellDef mat-sort-header>Date</th>
     <td cdk-cell *cdkCellDef="let element">{{element.date|date}}</td>
   </ng-container>
 
   <ng-container cdkColumnDef="name">
-    <th cdk-header-cell *cdkHeaderCellDef>Name</th>
+    <th cdk-header-cell *cdkHeaderCellDef mat-sort-header>Name</th>
     <td cdk-cell *cdkCellDef="let element">{{element.name}}</td>
   </ng-container>
 
   <ng-container cdkColumnDef="calories">
-    <th cdk-header-cell *cdkHeaderCellDef>Calories </th>
+    <th cdk-header-cell *cdkHeaderCellDef mat-sort-header>Calories </th>
     <td cdk-cell *cdkCellDef="let element">{{element.calories}}</td>
   </ng-container>
 
   <ng-container cdkColumnDef="duration">
-    <th cdk-header-cell *cdkHeaderCellDef>Duration</th>
+    <th cdk-header-cell *cdkHeaderCellDef mat-sort-header>Duration</th>
     <td cdk-cell *cdkCellDef="let element">{{element.duration}}</td>
   </ng-container>
 
