--- a/src/app/auth/log-in/log-in.component.html
+++ b/src/app/auth/log-in/log-in.component.html
@@ -4,7 +4,7 @@
     fxLayout="column"
     fxLayoutGap="10px"
     [formGroup]="loginForm"
-    (ngSubmit)="onSubmit()" >
+    (ngSubmit)="login()" >
   <mat-form-field>
     <input type="email"
            matInput
