--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,7 +4,7 @@
       <mat-icon>menu</mat-icon>
     </button>
   </div>
-  <div>LOGO</div>
+  <div>Fitness</div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="navigation-items">
       <li *ngIf="!isAuth">
