event emitter is added in uiService for spinner, spinner added

--- a/src/app/auth/log-in/log-in.component.html
+++ b/src/app/auth/log-in/log-in.component.html
@@ -29,6 +29,7 @@
       Missing password.
     </mat-error>
   </mat-form-field>
-    <button type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Login</button>
+    <button *ngIf="!isLoading" type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Login</button>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
